# aletheia

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  package.json  pyproject.toml  tsconfig.json
aletheia/: AGENTS.md  BOOTSTRAP.md  IDENTITY.md  SOUL.md  TOOLS.md  USER.md  __init__.py  cli.py
aletheia/agent/: __init__.py  agent.py  dispatcher.py  loop_.py  memory_loader.py  memory_store.py  prompt.py  quota_aware.py  research.py  session.py
aletheia/agent/loop/: __init__.py  detection.py  (+2 more)
aletheia/config/: __init__.py  settings.py
aletheia/daemon/: __init__.py  config.py  main.py  server.py
aletheia/providers/: __init__.py  base.py  kimi.py
aletheia/rag/: README.md  __init__.py  prompts.py  test_ui.py
aletheia/tools/: __init__.py  base.py  calculator_tool.py  rag_tool.py  registry.py
docker/: README.md
docker/elasticsearch/: README.md  docker-compose.yml  elasticsearch.yml  reset.sh  start.sh  stop.sh
docker/milvus/: README.md  docker-compose.yml  embedEtcd.yaml  reset.sh  start.sh  stop.sh  user.yaml
docs/: AGENT_ARCHITECTURE_ROADMAP.md  CORE_ARCHITECTURE.md  README.md  SETUP.md
scripts/: drop_all_data.py  hard_reset_database.py  migrate.py  reset_milvus_collection.py  start-all.sh
src/: server.ts
src/agent/: agent.ts  dispatcher.ts  memory-loader.ts  memory-store.ts  prompt.ts  research.ts  session.ts
src/config/: server.ts  settings.ts
src/providers/: base.ts  kimi.ts
src/rag/: prompts.ts
src/routes/: chat.ts  documents.ts  system.ts
src/tools/: base.ts  calculator-tool.ts  rag-tool.ts  registry.ts
src/websocket/: chat.ts  manager.ts
tests/: test_fast_retrieval.py  test_ingestion.py  test_rag_tool.py  test_retrieval.py  test_sqlite_store.py
web/: .env.example  .gitignore  next.config.js  package.json  pnpm-lock.yaml  tailwind.config.ts
(+78 files in other folders)
