[project]
name = "aletheia"
version = "0.1.0"
description = "Intelligent Document Agent with Self-Learning and Human Clone Capabilities"
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "docling",
    "openai",
    "pydantic",
    "python-dotenv",
    "pdf2image",
    "google-genai",
    "pymupdf",
    # Database
    "sqlalchemy>=2.0.0",   # ORM for database models
    # Production architecture dependencies
    "pymilvus>=2.3.0",     # Milvus vector database client
    "elasticsearch>=8.0.0,<9.0.0", # Elasticsearch client - must match server version
    # Daemon mode
    "fastapi>=0.100.0",    # API framework
    "uvicorn[standard]",   # ASGI server
    "python-multipart",    # File uploads
    # RAG Processing (Phase 1, 2, 3)
    "sentence-transformers>=2.2.0",  # Semantic chunking & embeddings
    "tiktoken>=0.5.0",               # Token counting for OpenAI models
    "nltk>=3.8",                     # Text processing for semantic chunking
    "scikit-learn>=1.3.0",           # Cosine similarity for semantic chunking
    # Optional: GPU acceleration
    # "torch>=2.0.0",                  # PyTorch for GPU (uncomment if needed)
    # Agent capabilities
    "aiohttp",             # Async HTTP for web fetching
    "apscheduler",         # Cron jobs for learning
    "numpy",               # Vector operations
    "requests",            # HTTP requests
    "tenacity",            # Retry logic
    # RAG Test UI
    "streamlit>=1.30.0",   # Web UI for testing
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["aletheia*"]

[project.scripts]
aletheia = "aletheia.cli:main"
